Modificaciones en diseño y logo.ico añadido

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Capitan Vape by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="icon" href="images/logo.ico" title="CapitanVape">
+		<link id="icon" rel="icon" href="images/logo.ico" title="CapitanVape">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -181,7 +181,7 @@
 				<div class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/Restaurante/rest3.png" alt="" /></a>
+						<a href="#" class="image restaurant"><img src="images/Restaurante/rest3.png" alt="" /></a>
 						<header>
 							<h2><a href="#">Variedad en nuestros menús, preparados con productos de alta calidad.</a></h2>
 							<p>
