--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 												<li><a href="#">Mécanicos</a></li>
 											</ul>
 										</li>
-										<li><a href="#">Kits</a></li>
+										<li><a href="Kits.html">Kits</a></li>
 										<li><a href="#">AIO</a></li>
 										<li>
 											<a href="#">Atomizadores</a>
