Añadiendo cambios a ubicación v.0.0.12

--- a/Kits.html
+++ b/Kits.html
@@ -82,16 +82,45 @@
 								<hr class="first" />
 								<section>
 									<header>
-										<h3><a href="#">Accumsan sed penatibus</a></h3>
+										<h3><a href="#">Capitan Vape</a></h3>
 									</header>
-									<p>
-										Dolor sed fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-										porttitor phasellus tempus cubilia ultrices tempor sagittis  tellus ante diam nec penatibus dolor cras
-										magna tempus feugiat veroeros.
-									</p>
-									<footer>
-										<a href="#" class="button">Learn More</a>
+									<div class="map-ubi">
+										<div style="width: 100%"><iframe width="100%" height="300" src="https://maps.google.com/maps?width=100%&height=300&hl=es&q=Capitan%Vape%20Nuevo%20Cuscatlan+(Capit%C3%A1n%20Vape)&ie=UTF8&t=h&z=16&iwloc=A&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.mapsdirections.info/calcular-ruta.html">Mapa de Ruta</a></iframe></div><br />
+									</div>
+									<div class="info">
+									<p>Boulevard Cuscatlán, Plaza Paradiso Local 3 Nuevo Cuscatlán, CP</p>
+									</div>
+									<footer class="ubi-link">
+										<a href="#" class="button">Ver ubicación...</a>
 									</footer>
+								</section>
+								<hr />
+
+								<div class="insta-title">
+									<a href="https://www.instagram.com/capitanvapesv/?hl=es-la"><p>Capitan Vape</p></a>
+								</div>
+								<!-- Photos -->
+								<section class="col-4 col-12-mobile">
+									<div class="row gtr-25">
+										<div class="col-6">
+											<a href="#" class="image fit"><img src="images/Gallery/gal1.png" alt="" /></a>
+										</div>
+										<div class="col-6">
+											<a href="#" class="image fit"><img src="images/Gallery/gal2.png" alt="" /></a>
+										</div>
+										<div class="col-6">
+											<a href="#" class="image fit"><img src="images/Gallery/gal3.png" alt="" /></a>
+										</div>
+										<div class="col-6">
+											<a href="#" class="image fit"><img src="images/Gallery/gal4.png" alt="" /></a>
+										</div>
+										<div class="col-6">
+											<a href="#" class="image fit"><img src="images/Gallery/gal5.png" alt="" /></a>
+										</div>
+										<div class="col-6">
+											<a href="#" class="image fit"><img src="images/Gallery/gal6.png" alt="" /></a>
+										</div>
+									</div>
 								</section>
 								<hr />
 								<section>
