--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -40,7 +40,7 @@
 											<li><a href="#">Mécanicos</a></li>
 										</ul>
 									</li>
-									<li><a href="#">Kits</a></li>
+									<li><a href="Kits.html">Kits</a></li>
 									<li><a href="#">AIO</a></li>
 									<li>
 										<a href="#">Atomizadores</a>
@@ -279,42 +279,21 @@
 									<!-- Posts -->
 										<section class="col-4 col-12-mobile">
 											<header>
-												<h2 class="icon solid fa-file circled"><span class="label">Posts</span></h2>
+												<h2 class="icon solid fa-map circled"><span class="label">Posts</span></h2>
 											</header>
-											<ul class="divided">
-												<li>
-													<article class="post stub">
-														<header>
-															<h3><a href="#">Nisl fermentum integer</a></h3>
-														</header>
-														<span class="timestamp">3 hours ago</span>
-													</article>
-												</li>
-												<li>
-													<article class="post stub">
-														<header>
-															<h3><a href="#">Phasellus portitor lorem</a></h3>
-														</header>
-														<span class="timestamp">6 hours ago</span>
-													</article>
-												</li>
-												<li>
-													<article class="post stub">
-														<header>
-															<h3><a href="#">Magna tempus consequat</a></h3>
-														</header>
-														<span class="timestamp">Yesterday</span>
-													</article>
-												</li>
-												<li>
-													<article class="post stub">
-														<header>
-															<h3><a href="#">Feugiat lorem ipsum</a></h3>
-														</header>
-														<span class="timestamp">2 days ago</span>
-													</article>
-												</li>
-											</ul>
+											<section>
+												<div class="map-ubi">
+													<div style="width: 100%"><iframe width="100%" height="300" src="https://maps.google.com/maps?width=100%&height=300&hl=es&q=Capitan%Vape%20Nuevo%20Cuscatlan+(Capit%C3%A1n%20Vape)&ie=UTF8&t=h&z=16&iwloc=A&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.mapsdirections.info/calcular-ruta.html">Mapa de Ruta</a></iframe></div><br />
+												</div>
+												<div class="info">
+													
+														<h3><a href="index.html">Capitan Vape</a></h3>
+													<p>Boulevard Cuscatlán, Plaza Paradiso Local 3 Nuevo Cuscatlán, CP</p>
+												</div>
+												<footer class="ubi-link">
+													<a href="https://www.google.com/maps?ll=13.652227,-89.263816&z=16&t=h&hl=es&gl=US&mapclient=embed&cid=18265157331667945363" class="button">Ver ubicación...</a>
+												</footer>
+											</section>
 										</section>
 		
 									<!-- Photos -->
