--- a/Kits.html
+++ b/Kits.html
@@ -104,22 +104,22 @@
 								<section class="col-4 col-12-mobile">
 									<div class="row gtr-25">
 										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/Gallery/gal1.png" alt="" /></a>
+											<a href="https://www.instagram.com/p/B25EHcnDXRjWquuCkS7zDwb-S-X3iBKS2EYT6I0/" class="image fit"><img src="images/Bar_gal/bar1.png" alt="" /></a>
 										</div>
 										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/Gallery/gal2.png" alt="" /></a>
+											<a href="https://www.instagram.com/p/ByeLqq1FZ-7xc-OI8d03Rb6eKOsW6l6WxnWMe80/" class="image fit"><img src="images/Bar_gal/bar2.png" alt="" /></a>
 										</div>
 										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/Gallery/gal3.png" alt="" /></a>
+											<a href="https://www.instagram.com/p/ByoIq1QFQgEHHFJJIz4CPFc-fb4P7cRKb2YYSQ0/" class="image fit"><img src="images/Bar_gal/bar3.png" alt="" /></a>
 										</div>
 										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/Gallery/gal4.png" alt="" /></a>
+											<a href="https://www.instagram.com/p/BtJU_yRnZOkDmmcu2aNkxISL9M5GGkSQOzw-CE0/" class="image fit"><img src="images/Bar_gal/bar4.png" alt="" /></a>
 										</div>
 										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/Gallery/gal5.png" alt="" /></a>
+											<a href="https://www.instagram.com/p/BnNarqUB1mXqKN8fLy3zEdw9iGp82OFBseQqCg0/" class="image fit"><img src="images/Bar_gal/bar5.png" alt="" /></a>
 										</div>
 										<div class="col-6">
-											<a href="#" class="image fit"><img src="images/Gallery/gal6.png" alt="" /></a>
+											<a href="https://www.instagram.com/p/B4lcL4YDBJGMb_b9vL0EhlC4yigbwi-eTBkAAg0/" class="image fit"><img src="images/Bar_gal/bar6.png" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -520,22 +520,22 @@
 											</header>
 											<div class="row gtr-25">
 												<div class="col-6">
-													<a href="#" class="image fit"><img src="images/Gallery/gal1.png" alt="" /></a>
+													<a href="https://www.instagram.com/p/Bo0OxEJBaPToOjfICRu_4XpjXr47aTbUE9-NbY0/" class="image fit"><img src="images/Gallery/gal1.png" alt="" /></a>
 												</div>
 												<div class="col-6">
-													<a href="#" class="image fit"><img src="images/Gallery/gal2.png" alt="" /></a>
+													<a href="https://www.instagram.com/p/B0UT0walwoA04IucBGYJ0iw-cJQClOfIPinCJM0/" class="image fit"><img src="images/Gallery/gal2.png" alt="" /></a>
 												</div>
 												<div class="col-6">
-													<a href="#" class="image fit"><img src="images/Gallery/gal3.png" alt="" /></a>
+													<a href="https://www.instagram.com/p/B2kTiOQFYk1zm2crjqWU1vKDGIhTI0YYpbsH6Y0/" class="image fit"><img src="images/Gallery/gal3.png" alt="" /></a>
 												</div>
 												<div class="col-6">
-													<a href="#" class="image fit"><img src="images/Gallery/gal4.png" alt="" /></a>
+													<a href="https://www.instagram.com/p/ByoIq1QFQgEHHFJJIz4CPFc-fb4P7cRKb2YYSQ0/" class="image fit"><img src="images/Gallery/gal4.png" alt="" /></a>
 												</div>
 												<div class="col-6">
-													<a href="#" class="image fit"><img src="images/Gallery/gal5.png" alt="" /></a>
+													<a href="https://www.instagram.com/p/BtLtbsvnwbnRVQ9HidKbxmRgElPa06Wtc_ffn80/" class="image fit"><img src="images/Gallery/gal5.png" alt="" /></a>
 												</div>
 												<div class="col-6">
-													<a href="#" class="image fit"><img src="images/Gallery/gal6.png" alt="" /></a>
+													<a href="https://www.instagram.com/p/BsWdCF6Huudpxisd0sQ5BDSK3NSUnTkIxaxixg0/" class="image fit"><img src="images/Gallery/gal6.png" alt="" /></a>
 												</div>
 											</div>
 										</section>
@@ -548,9 +548,9 @@
 										<!-- Contact -->
 											<section class="contact">
 												<header>
-													<h3>Nisl turpis nascetur interdum?</h3>
+													<h3>¿Quieres saber más acerca de nuestros productos?</h3>
 												</header>
-												<p>Urna nisl non quis interdum mus ornare ridiculus egestas ridiculus lobortis vivamus tempor aliquet.</p>
+												<p>Visita nuestrar redes sociales Facebook e Instagram.</p>
 												<ul class="icons">
 													<li><a href="https://www.facebook.com/Capitan-vapesv-350309472151681/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 													<li><a href="https://www.instagram.com/capitanvapesv/?hl=es-la" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -561,7 +561,7 @@
 										<!-- Copyright -->
 											<div class="copyright">
 												<ul class="menu">
-													<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+													<li>&copy; Capitan Vape. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 												</ul>
 											</div>
 		
