--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -303,22 +303,22 @@
 											</header>
 											<div class="row gtr-25">
 												<div class="col-6">
-													<a href="#" class="image fit"><img src="images/Gallery/gal1.png" alt="" /></a>
+													<a href="https://www.instagram.com/p/Bo0OxEJBaPToOjfICRu_4XpjXr47aTbUE9-NbY0/" class="image fit"><img src="images/Gallery/gal1.png" alt="" /></a>
 												</div>
 												<div class="col-6">
-													<a href="#" class="image fit"><img src="images/Gallery/gal2.png" alt="" /></a>
+													<a href="https://www.instagram.com/p/B0UT0walwoA04IucBGYJ0iw-cJQClOfIPinCJM0/" class="image fit"><img src="images/Gallery/gal2.png" alt="" /></a>
 												</div>
 												<div class="col-6">
-													<a href="#" class="image fit"><img src="images/Gallery/gal3.png" alt="" /></a>
+													<a href="https://www.instagram.com/p/B2kTiOQFYk1zm2crjqWU1vKDGIhTI0YYpbsH6Y0/" class="image fit"><img src="images/Gallery/gal3.png" alt="" /></a>
 												</div>
 												<div class="col-6">
-													<a href="#" class="image fit"><img src="images/Gallery/gal4.png" alt="" /></a>
+													<a href="https://www.instagram.com/p/ByoIq1QFQgEHHFJJIz4CPFc-fb4P7cRKb2YYSQ0/" class="image fit"><img src="images/Gallery/gal4.png" alt="" /></a>
 												</div>
 												<div class="col-6">
-													<a href="#" class="image fit"><img src="images/Gallery/gal5.png" alt="" /></a>
+													<a href="https://www.instagram.com/p/BtLtbsvnwbnRVQ9HidKbxmRgElPa06Wtc_ffn80/" class="image fit"><img src="images/Gallery/gal5.png" alt="" /></a>
 												</div>
 												<div class="col-6">
-													<a href="#" class="image fit"><img src="images/Gallery/gal6.png" alt="" /></a>
+													<a href="https://www.instagram.com/p/BsWdCF6Huudpxisd0sQ5BDSK3NSUnTkIxaxixg0/" class="image fit"><img src="images/Gallery/gal6.png" alt="" /></a>
 												</div>
 											</div>
 										</section>
@@ -331,9 +331,9 @@
 										<!-- Contact -->
 											<section class="contact">
 												<header>
-													<h3>Nisl turpis nascetur interdum?</h3>
+													<h3>¿Quieres saber más acerca de nuestros productos?</h3>
 												</header>
-												<p>Urna nisl non quis interdum mus ornare ridiculus egestas ridiculus lobortis vivamus tempor aliquet.</p>
+												<p>Visita nuestrar redes sociales Facebook e Instagram.</p>
 												<ul class="icons">
 													<li><a href="https://www.facebook.com/Capitan-vapesv-350309472151681/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 													<li><a href="https://www.instagram.com/capitanvapesv/?hl=es-la" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -344,7 +344,7 @@
 										<!-- Copyright -->
 											<div class="copyright">
 												<ul class="menu">
-													<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+													<li>&copy; Capitan Vape. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 												</ul>
 											</div>
 		
