--- a/index.html
+++ b/index.html
@@ -34,9 +34,25 @@
 							</footer>
 						</div>
 
+					
 					<!-- Nav -->
-						<nav id="nav">
-							<ul>
+					<nav id="nav">
+							<div class="fecha_hora">
+								<div class="fecha">
+									<script src="/assets/js/fecha_hora.js" type="text/javascript"></script>
+									<div id="fecha" style="font-size:20px;"></div>    
+								</div>
+	
+								<div class="bloque1"></div>
+								<div class="bloque2"></div>
+	
+								<div class="hora">
+										<script src="/assets/js/fecha_hora.js" type="text/javascript"></script>
+										<div id="hora" style="font-size:20px;"></div>    
+								</div>
+							</div>
+			
+						<ul>
 								<li><a href="index.html">Inicio</a></li>
 								<li>
 									<a href="#">Productos</a>
