--- a/Kits.html
+++ b/Kits.html
@@ -17,8 +17,8 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<div id="header">
-
+			<div id="header" >
+				<img src="/images/Gallery/gal2.png" alt="fondo" />
 					<!-- Inner -->
 						<div class="inner">
 							<header>
@@ -30,7 +30,6 @@
 					<nav id="nav">
 						<div class="fecha_hora">
 							<div class="fecha">
-								<script src="/assets/js/fecha_hora.js" type="text/javascript"></script>
 								<div id="fecha" style="font-size:20px;"></div>    
 							</div>
 
@@ -38,7 +37,6 @@
 							<div class="bloque2"></div>
 
 							<div class="hora">
-									<script src="/assets/js/fecha_hora.js" type="text/javascript"></script>
 									<div id="hora" style="font-size:20px;"></div>    
 							</div>
 						</div>
@@ -434,38 +432,49 @@
 							</div>
 						</div>
 						<hr />
-						<div class="row">
-							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/Productos/pic26.png" alt="" /></a>
-								<header>
-									<h3><a href="#">Productos</a></h3>
-								</header>
-								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-								</p>
-							</article>
-							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/Restaurante/rest1.png" alt="" /></a>
-								<header>
-									<h3><a href="#">Reservaciones</a></h3>
-								</header>
-								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-								</p>
-							</article>
-							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/logo.png" alt="" /></a>
-								<header>
-									<h3><a href="#">Más información</a></h3>
-								</header>
-								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-								</p>
-							</article>
-						</div>
+						<!-- Features -->
+				<div class="wrapper style1">
+
+						<section id="features" class="container special">
+							<header>
+								<h2>Conoce más sobre nuestros servicios...</h2>
+								<p>Ipsum volutpat consectetur orci metus consequat imperdiet duis integer semper magna.</p>
+							</header>
+							<div class="row">
+								<article class="col-4 col-12-mobile special">
+									<a href="#" class="image featured"><img src="images/Productos/pic26.png" alt="" /></a>
+									<header>
+										<h3><a href="#">Productos</a></h3>
+									</header>
+									<p>
+										Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
+										porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									</p>
+								</article>
+								<article class="col-4 col-12-mobile special">
+									<a href="#" class="image featured"><img src="images/Restaurante/rest1.png" alt="" /></a>
+									<header>
+										<h3><a href="#">Reservaciones</a></h3>
+									</header>
+									<p>
+										Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
+										porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									</p>
+								</article>
+								<article class="col-4 col-12-mobile special">
+									<a href="#" class="image featured"><img src="images/logo.png" alt="" /></a>
+									<header>
+										<h3><a href="#">Más información</a></h3>
+									</header>
+									<p>
+										Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
+										porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									</p>
+								</article>
+							</div>
+						</section>
+	
+					</div>
 					</div>
 
 				</div>
@@ -597,6 +606,9 @@
 					<script src="assets/js/breakpoints.min.js"></script>
 					<script src="assets/js/util.js"></script>
 					<script src="assets/js/main.js"></script>
+					<script src="assets/js/fecha_hora.js" type="text/javascript"></script>
+									
+								
 		
 			</body>
 		</html>
