--- a/Kits.html
+++ b/Kits.html
@@ -60,6 +60,7 @@
 										<ul>
 											<li><a href="#">rda</a></li>
 											<li><a href="#">dta</a></li>
+											<li><a href="#">rdta</a></li>
 											<li><a href="#">mtl</a></li>
 										</ul>
 									</li>
@@ -69,8 +70,8 @@
 											<li><a href="#">Pod System</a></li>
 											<li><a href="#">Algodón</a></li>
 											<li><a href="#">Baterias</a></li>
-											<li><a href="#">Cargador</a></li>
 											<li><a href="#">Coils</a></li>
+											<li><a href="#">Cargador</a></li>
 											<li><a href="#">DRIP TIP</a></li>
 											<li><a href="#">DOORS</a></li>
 										</ul>
