--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 					<nav id="nav">
 							<div class="fecha_hora">
 								<div class="fecha">
-									<script src="/assets/js/fecha_hora.js" type="text/javascript"></script>
 									<div id="fecha" style="font-size:20px;"></div>    
 								</div>
 	
@@ -47,12 +46,11 @@
 								<div class="bloque2"></div>
 	
 								<div class="hora">
-										<script src="/assets/js/fecha_hora.js" type="text/javascript"></script>
 										<div id="hora" style="font-size:20px;"></div>    
 								</div>
 							</div>
 			
-						<ul>
+							<ul>
 								<li><a href="index.html">Inicio</a></li>
 								<li>
 									<a href="#">Productos</a>
@@ -71,6 +69,7 @@
 											<ul>
 												<li><a href="#">rda</a></li>
 												<li><a href="#">dta</a></li>
+												<li><a href="#">rdta</a></li>
 												<li><a href="#">mtl</a></li>
 											</ul>
 										</li>
@@ -80,8 +79,8 @@
 												<li><a href="#">Pod System</a></li>
 												<li><a href="#">Algodón</a></li>
 												<li><a href="#">Baterias</a></li>
-												<li><a href="#">Cargador</a></li>
 												<li><a href="#">Coils</a></li>
+												<li><a href="#">Cargador</a></li>
 												<li><a href="#">DRIP TIP</a></li>
 												<li><a href="#">DOORS</a></li>
 											</ul>
