--- a/index.html
+++ b/index.html
@@ -392,6 +392,7 @@
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
+		<script src="assets/js/fecha_hora.js" type="text/javascript"></script>
 
 </body>
 </html>
