--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -28,48 +28,62 @@
 
 					<!-- Nav -->
 					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Inicio</a></li>
-							<li>
-								<a href="#">Productos</a>
-								<ul>
-									<li>
-										<a href="#">MODS</a>
-										<ul>
-											<li><a href="#">Regulados</a></li>
-											<li><a href="#">Mécanicos</a></li>
-										</ul>
-									</li>
-									<li><a href="Kits.html">Kits</a></li>
-									<li><a href="#">AIO</a></li>
-									<li>
-										<a href="#">Atomizadores</a>
-										<ul>
-											<li><a href="#">rda</a></li>
-											<li><a href="#">dta</a></li>
-											<li><a href="#">mtl</a></li>
-										</ul>
-									</li>
-									<li>
-										<a href="#">Componentes</a>
-										<ul>
-											<li><a href="#">Pod System</a></li>
-											<li><a href="#">Algodón</a></li>
-											<li><a href="#">Baterias</a></li>
-											<li><a href="#">Cargador</a></li>
-											<li><a href="#">Coils</a></li>
-											<li><a href="#">DRIP TIP</a></li>
-											<li><a href="#">DOORS</a></li>
-										</ul>
-									</li>
-									
-								</ul>
-							</li>
-							<li><a href="left-sidebar.html">Left Sidebar</a></li>
-							<li><a href="right-sidebar.html">Right Sidebar</a></li>
-							<li><a href="no-sidebar.html">No Sidebar</a></li>
-						</ul>
-					</nav>
+							<div class="fecha_hora">
+								<div class="fecha">
+									<div id="fecha" style="font-size:20px;"></div>    
+								</div>
+	
+								<div class="bloque1"></div>
+								<div class="bloque2"></div>
+	
+								<div class="hora">
+										<div id="hora" style="font-size:20px;"></div>    
+								</div>
+							</div>
+			
+							<ul>
+								<li><a href="index.html">Inicio</a></li>
+								<li>
+									<a href="#">Productos</a>
+									<ul>
+										<li>
+											<a href="#">MODS</a>
+											<ul>
+												<li><a href="#">Regulados</a></li>
+												<li><a href="#">Mécanicos</a></li>
+											</ul>
+										</li>
+										<li><a href="Kits.html">Kits</a></li>
+										<li><a href="#">AIO</a></li>
+										<li>
+											<a href="#">Atomizadores</a>
+											<ul>
+												<li><a href="#">rda</a></li>
+												<li><a href="#">dta</a></li>
+												<li><a href="#">rdta</a></li>
+												<li><a href="#">mtl</a></li>
+											</ul>
+										</li>
+										<li>
+											<a href="#">Componentes</a>
+											<ul>
+												<li><a href="#">Pod System</a></li>
+												<li><a href="#">Algodón</a></li>
+												<li><a href="#">Baterias</a></li>
+												<li><a href="#">Coils</a></li>
+												<li><a href="#">Cargador</a></li>
+												<li><a href="#">DRIP TIP</a></li>
+												<li><a href="#">DOORS</a></li>
+											</ul>
+										</li>
+										
+									</ul>
+								</li>
+								<li><a href="left-sidebar.html">Left Sidebar</a></li>
+								<li><a href="right-sidebar.html">Right Sidebar</a></li>
+								<li><a href="no-sidebar.html">No Sidebar</a></li>
+							</ul>
+						</nav>
 
 			</div>
 
@@ -365,6 +379,7 @@
 					<script src="assets/js/breakpoints.min.js"></script>
 					<script src="assets/js/util.js"></script>
 					<script src="assets/js/main.js"></script>
+					<script src="assets/js/fecha_hora.js" type="text/javascript"></script>
 		
 			</body>
 		</html>
