Añadiendo carpetas de productos v.0.0.18

--- a/M_Regulados.html
+++ b/M_Regulados.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Kits - Helios by HTML5 UP</title>
+		<title>Regulados - Helios by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="icon" href="images/logo.ico" title="CapitanVape">
@@ -22,7 +22,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="#" id="logo">Kits</a></h1>
+								<h1><a href="#" id="logo">Regulados</a></h1>
 							</header>
 						</div>
 
@@ -200,7 +200,7 @@
 							<div class="col-8 col-12-mobile imp-mobile" id="content">
 								<article id="main">
 									<header>
-										<h2><a href="#">Kits de Productos</a></h2>
+										<h2><a href="#">Productos Regulados</a></h2>
 										<p>
 											Morbi convallis lectus malesuada sed fermentum dolore amet
 										</p>
