Fixed palabra Mécanicos a Mecánicos

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 											<a href="#">MODS</a>
 											<ul>
 												<li><a href="M_Regulados.html">Regulados</a></li>
-												<li><a href="M_Mecanicos.html">Mécanicos</a></li>
+												<li><a href="M_Mecanicos.html">Mecánicos</a></li>
 											</ul>
 										</li>
 										<li><a href="Kits.html">Kits</a></li>
