--- a/M_Mecanicos.html
+++ b/M_Mecanicos.html
@@ -200,7 +200,7 @@
 							<div class="col-8 col-12-mobile imp-mobile" id="content">
 								<article id="main">
 									<header>
-										<h2><a href="#">Productos Mécanicos</a></h2>
+										<h2><a href="#">Productos Mecánicos</a></h2>
 										<p>
 											Morbi convallis lectus malesuada sed fermentum dolore amet
 										</p>
