--- a/Kits.html
+++ b/Kits.html
@@ -231,18 +231,18 @@
 									</div>
 									<div class="caja producto">	
 											<div class="imagen">
-												<a href="#" class="image kit"><img src="images/Productos/Kits/voopoo2.jpg" alt="" /></a>
+												<a href="#" class="image kit"><img src="images/Productos/Kits/voopoo2.jpeg" alt="" /></a>
 											</div>
 											<div class="info">
 												<div class="caja-title">
 													<header class="title">
-															<h3>Kit voopoo drag 2</h3>
+															<h3>Voopoo drag mini</h3>
 													</header>
 												</div>
 												<div class="text">
 													<ul>
 														<li>	Aplicación fácil permanente, pero se puede quitar fácilmente si así lo desea</li>
-														<li>	Estas son calcomanías hechas a medida, no originales de fábrica.</li>
+														<li>	Batería recargable integrada de 4400 mAh.</li>
 														<li>	Está hecho de lo mismo que se usa en las envolturas de vehículos.</li>
 														<li>	Este no es un caso o una piel de silicona.</li>
 														
@@ -258,7 +258,7 @@
 											<div class="info">
 												<div class="caja-title">
 													<header class="title">
-															<h3>Kit voopoo drag 2</h3>
+															<h3>obs cube</h3>
 													</header>
 												</div>
 												<div class="text">
@@ -280,7 +280,7 @@
 										<div class="info">
 											<div class="caja-title">
 												<header class="title">
-														<h3>Kit voopoo drag 2</h3>
+														<h3>Wismec Luxotic</h3>
 												</header>
 											</div>
 											<div class="text">
@@ -302,7 +302,7 @@
 										<div class="info">
 											<div class="caja-title">
 												<header class="title">
-														<h3>Kit voopoo drag 2</h3>
+														<h3>Asmodus Spruzza 80w</h3>
 												</header>
 											</div>
 											<div class="text">
