--- a/AIO.html
+++ b/AIO.html
@@ -22,7 +22,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="#" id="logo">Kits</a></h1>
+								<h1><a href="#" id="logo">AIO</a></h1>
 							</header>
 						</div>
 
@@ -200,7 +200,7 @@
 							<div class="col-8 col-12-mobile imp-mobile" id="content">
 								<article id="main">
 									<header>
-										<h2><a href="#">Kits de Productos</a></h2>
+										<h2><a href="#">Productos AIO</a></h2>
 										<p>
 											Morbi convallis lectus malesuada sed fermentum dolore amet
 										</p>
@@ -209,20 +209,20 @@
 								
 									<div class="caja producto">	
 											<div class="imagen">
-												<a href="#" class="image kit"><img src="images/Productos/VopooD2/voopoo1.jpg" alt="" /></a>
+												<a href="#" class="image kit"><img src="images/Productos/AIO/aio1.jpg" alt="" /></a>
 											</div>
 											<div class="info">
 												<div class="caja-title">
 													<header class="title">
-															<h3>Kit voopoo drag 2</h3>
+															<h3>dotAIO 35w</h3>
 													</header>
 												</div>
 												<div class="text">
 													<ul>
-														<li>	Aplicación fácil permanente, pero se puede quitar fácilmente si así lo desea</li>
-														<li>	Estas son calcomanías hechas a medida, no originales de fábrica.</li>
-														<li>	Está hecho de lo mismo que se usa en las envolturas de vehículos.</li>
-														<li>	Este no es un caso o una piel de silicona.</li>
+														<li>	Potencia 35w.</li>
+														<li>	Ocupa 1 batería de 18650.</li>
+														<li>	Con tarjeta de autenticidad.</li>
+														<li>	Accesorios: Punta de goteo Ultem 510, cable de carga tipo C, paquetes de repuesto, manual de uso.</li>
 														
 													</ul>>
 												</div>	
