Añadiendo productos Atomizadores rdta

--- a/A_rdta.html
+++ b/A_rdta.html
@@ -220,7 +220,7 @@
 												<div class="text">
 													<ul>
 														<li>	Diámetro: 24mm.</li>
-														<li>	</li>
+														<li>	Ocupa tanque con capacidad 2ml.</li>
 														<li>	Con tarjeta de autenticidad.</li>
 														<li>	Accesorios: 2 dotCoils, 2 Drip Tips, 1 llave dotMod, cobre mejorado chapado en oro de 24k 510 pin Squonk .</li>
 														
