--- a/Kits.html
+++ b/Kits.html
@@ -79,7 +79,13 @@
 										
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
+								<li>
+									<a href="#">Bar</a>
+									<ul>
+										<li><a href="Bar_snacks.html">Snacks</a></li>
+										<li><a href="Bar_drinks.html">Bebidas</a></li>										
+									</ul>
+								</li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
 							</ul>
